# snippet

./: CMakeLists.txt  README.md
cmake/demo1/: CMakeLists.txt  main.cc
cmake/demo2/: CMakeLists.txt  main.cc
cmake/demo3/: CMakeLists.txt  main.cc
cmake/demo3/math/: MathFunctions.h
cmake/demo4/: CMakeLists.txt  main.cc
cmake/demo4/math/: CMakeLists.txt
cmake/demo5/: CMakeLists.txt
cmake/demo6/: CMakeLists.txt  config.h  config.h.in  main.cc
cmake/demo6/math/: CMakeLists.txt  MathFunctions.cc
cmake/demo7/: CMakeLists.txt  config.h  config.h.in  main.cc
cmake/hello/: CMakeLists.txt
cmake/hello/src/: CMakeLists.txt
cmake/hello2/: CMakeLists.txt  CMakeLists.txt~
cmake/hello2/doc/: hello.txt
cmake/hello2/src/: CMakeLists.txt  main.cpp  main.cpp~
cmake/hello3/: CMakeLists.txt
cmake/hello3/lib/: CMakeLists.txt  CMakeLists.txt~  hello.c
emacslisp/emacs/: init.el
go/src/americanise/: americanise.go_bak  british-american.txt  outfile.txt
go/src/bigdigits_ans/: bigdigits.go
go/src/polar2cartesian/: polar2cartesian.go
go/src/stacker/: stacker.go
go/src/stacker/stack/: stack.go
go/src/statistics_ans/: statistics.go
py/: python_svr.py  regex_mobile.py  批量终止mysql耗时连接.py
rsa/: CMakeLists.txt  README.md  rsa_decode.php  rsa_pri_key_1024.pem  rsa_pri_key_2048.pem  rsa_pub_key_1024.pem  rsa_pub_key_2048.pem
rsa/include/: base64.h  rsa.h
rsa/rsa/: Makefile  cmake_install.cmake  rsa
rsa/src/: base64.cc  rsa.cc
sh/: echo_daily.sh  gap_microsecond.sh  run.sh
